base/argocd-ip-whitelist.yaml
# middleware/argocd-ip-whitelist.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: argocd-ip-whitelist
  namespace: dev
spec:
  ipWhiteList:
    sourceRange:
      - 193.92.158.159/32
      - 195.20.114.76/32
