base/deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: python-app
#   labels:
#     app: python-app
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: python-app
#   template:
#     metadata:
#       labels:
#         app: python-app
#     spec:
#       containers:
#       - name: python-app
#         image: returnick/python-app:latest
#         ports:
#         - containerPort: 8080
#       volumes:
#       - name: app-volume
#         configMap:
#           name: app-code
#         resources:
#           requests:
#             cpu: '2000m'
#             memory: "4Gi"
#           limits:
#             cpu: '2000m'
#             memory: "4Gi"

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: returnick/flask-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
